--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,24 @@
 {
    "name": "CopyEmbeds",
-   "version": "1.2.1",
+   "version": "1.3.0",
    "description": "Copy the content of an embed.",
+   "release": "stable",
    "authors": [
       {
          "name": "tenzin",
          "id": "1021823375112417393"
+      },
+      {
+         "name": "Acquite <3",
+         "id": "581573474296791211"
       }
-   ]
+   ],
+   "plugin": [
+      {
+         "download": "https://raw.githubusercontent.com/acquitelol/dislate/main/dist/Dislate.js",
+         "repo": "https://github.com/acquitelol/dislate",
+         "user": "https://github.com/acquitelol/"
+      }
+   ],
+   "color": "#B00B69"
 }
